--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
-  <link rel="stylesheet" href="./assets/styles/css/main.css">
+  <link rel="stylesheet" href="./assets/styles/css/styles.css">
 </head>
-<body>
-
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
+<body class="container">
+  <header class="header">
+    <img class="header__logo" src="./assets/images/logo.svg" alt="">
+    <img class="header__img" src="./assets/images/hero-mobile.jpg" alt="" srcset="">
+  </header>
+  <main class="main">
+    <h1 class="main__title"><span>We're</span> coming soon</h1>
+    <p class="main__text">
+      Hello fellow shoppers! We're currently building our new fashion store. 
+      Add your email below to stay up-to-date with announcements and our launch deals.
+    </p>
+    <form class="main__form">
+      <input type="email" name="" id="" placeholder="Email Address">
+      <button><img src="./assets/images/icon-arrow.svg" alt=""></button>
+    </form>
+  </main>
 </body>
 </html>
